--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "core-js": "^2.4.1",
+    "crypto": "^1.0.1",
+    "crypto-js": "^3.1.9-1",
     "rxjs": "^5.4.2",
     "simplify-commerce": "^1.8.0",
     "zone.js": "^0.8.14"
