--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "core-js": "^2.4.1",
+    "cors": "^2.8.4",
     "crypto": "^1.0.1",
     "crypto-js": "^3.1.9-1",
+    "express": "^4.16.2",
     "rxjs": "^5.4.2",
     "simplify-commerce": "^1.8.0",
     "zone.js": "^0.8.14"
