--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 /out-tsc
 
 # dependencies
-/node_modules
+/client/node_modules
 
 # IDEs and editors
 /.idea
@@ -34,8 +34,8 @@ testem.log
 /typings
 
 # e2e
-/e2e/*.js
-/e2e/*.map
+/client/e2e/*.js
+/client/e2e/*.map
 
 # System Files
 .DS_Store
